config/slate-controller.yaml
apiVersion: v1
kind: Service
metadata:
  name: slate-controller
  labels:
    app: slate-controller
    service: slate-controller
spec:
  ports:
    - name: http
      port: 8000
      targetPort: 8080
  selector:
    app: slate-controller
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: slate-controller
spec:
  replicas: 1
  selector:
    matchLabels:
      app: slate-controller
      version: v1
  template:
    metadata:
      labels:
        app: slate-controller
        version: v1
    spec:
      topologySpreadConstraints:
      - maxSkew: 1
        topologyKey: topology.kubernetes.io/zone
        whenUnsatisfiable: ScheduleAnyway
        labelSelector:
          matchLabels:
            app: slate-controller
      serviceAccountName: slate-controller-sa
      containers:
      - image: ghcr.io/adiprerepa/slate-controller:latest # todo change
        imagePullPolicy: Always
        name: slate-controller
        ports:
          - containerPort: 8080
        securityContext:
          capabilities:
            add:
            - NET_ADMIN
      terminationGracePeriodSeconds: 5
