config/metrics-dr-vs.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: metrics-handler
spec:
  host: metrics-handler
  subsets:
  - name: west
    labels:
      topology.istio.io/network: network1
  - name: east
    labels:
      topology.istio.io/network: network2
---
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: metrics-processor
spec:
  host: metrics-processor
  subsets:
  - name: west
    labels:
      topology.istio.io/network: network1
  - name: east
    labels:
      topology.istio.io/network: network2
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: metrics-handler
spec:
  hosts:
  - metrics-handler
  http:
  - name: "west-local"
    match:
    - sourceLabels:
        topology.istio.io/network: network1
    route:
    - destination:
        host: metrics-handler
        subset: west
  - name: "east-local"
    match:
    - sourceLabels:
        topology.istio.io/network: network2
    route:
    - destination:
        host: metrics-handler
        subset: east
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: metrics-processing
spec:
  hosts:
  - metrics-processing
  http:
  - name: "west-local"
    match:
    - sourceLabels:
        topology.istio.io/network: network1
    route:
    - destination:
        host: metrics-processing
        subset: west
  - name: "east-local"
    match:
    - sourceLabels:
        topology.istio.io/network: network2
    route:
    - destination:
        host: metrics-processing
        subset: east
---
